force-app/main/default/objects/Workout_Session__c/Workout_Session__c.object-meta.xml
<CustomObject>
    <label>Workout Session</label>
    <nameField>
        <displayFormat>Session ID - {0000}</displayFormat>
        <label>Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workout Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>