force-app/main/default/objects/Workout_Session__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workout Sessions</relationshipLabel>
    <relationshipName>Workout_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>