force-app/main/default/objects/Workout_Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <label>Session Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strength Training</fullName>
            </value>
            <value>
                <fullName>Cardio</fullName>
            </value>
            <value>
                <fullName>Flexibility</fullName>
            </value>
            <value>
                <fullName>HIIT (High-Intensity Interval Training)</fullName>
            </value>
            <value>
                <fullName>Yoga</fullName>
            </value>
            <value>
                <fullName>Pilates</fullName>
            </value>
            <value>
                <fullName>Endurance Training</fullName>
            </value>
            <value>
                <fullName>Sports Conditioning</fullName>
            </value>
            <value>
                <fullName>Bodyweight Exercises</fullName>
            </value>
            <value>
                <fullName>Functional Training</fullName>
            </value>
            <value>
                <fullName>Circuit Training</fullName>
            </value>
            <value>
                <fullName>Dance Fitness</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Swimming</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>