force-app/main/default/objects/Workout_Session__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Workout Sessions (Trainer)</relationshipLabel>
    <relationshipName>Workout_Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>